[Wrap-up] a tag color fix, github in footer, remove inexistent routes

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ hr {
 
 a {
   text-decoration: none;
-  color: black;
+  color: inherit;
 }
 
 svg {
